darwin-rs/tui/src/snapshots/darwin_code_tui__model_migration__tests__model_migration_prompt_gpt5_darwin.snap
---
source: tui/src/model_migration.rs
expression: terminal.backend()
---

> Darwin-Code just got an upgrade. Introducing gpt-5.1-darwin-code-max.

  We recommend switching from gpt-5-darwin-code to
  gpt-5.1-darwin-code-max.

  DarwinCode-optimized flagship for deep and fast reasoning.
  Learn more about gpt-5.1-darwin-code-max at
  https://www.darwin-code.com/models/gpt-5.1-darwin-code-max

  Press enter to continue
