darwin-rs/tui/src/snapshots/darwin_code_tui__model_migration__tests__model_migration_prompt_gpt5_darwin_mini.snap
---
source: tui/src/model_migration.rs
expression: terminal.backend()
---

> Darwin-Code just got an upgrade. Introducing gpt-5.1-darwin-code-mini.

  We recommend switching from gpt-5-darwin-code-mini to
  gpt-5.1-darwin-code-mini.

  Optimized for darwin-code. Cheaper, faster, but less capable.
  Learn more about gpt-5.1-darwin-code-mini at
  https://www.darwin-code.com/models/gpt-5.1-darwin-code-mini

  Press enter to continue
