darwin-rs/tui/src/snapshots/darwin_code_tui__model_migration__tests__model_migration_prompt_gpt5_family.snap
---
source: tui/src/model_migration.rs
expression: terminal.backend()
---

> DarwinCode just got an upgrade. Introducing gpt-5.1.

  We recommend switching from gpt-5 to gpt-5.1.

  Broad world knowledge with strong general reasoning. Learn more
  about gpt-5.1 at https://www.darwin_code.com/models/gpt-5.1

  Press enter to continue
